2003-03-25  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (get-supplied-p): new function
	(analyze-key, analyze1): use it
	(analyze-key): do not evaluate the init form when the argument
	has been supplied
	Reported by Christophe Rhodes <csr21@cam.ac.uk>

2003-03-24  Sam Steingold  <sds@gnu.org>

	* package.d (SYMBOL-VALUE-LOCK): return T only when the package
	is locked (helps SBCL bootstrap)

2003-03-22  Sam Steingold  <sds@gnu.org>

	* configure (--edit-config): new option (for --build & --install)

2003-03-18  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): allow multiple -x options
	-repl forces REPL after -c/-x/exec
	option "--" terminates option processing; set *ARGS* earlier
	* _clisp.c (main): "-r" for "-repl"

2003-03-14  Sam Steingold  <sds@gnu.org>

	function (SETF FFI:VALIDP) invalidates foreign objects
	* foreign.d (SET-VALIDP): implemented
	* foreign1.lisp (validp): added a defsetf
	* subr.d, constsym.d (set_validp): added

2003-03-14  Sam Steingold  <sds@gnu.org>

	extract and modify the FOREIGN-POINTER anchor
	* foreign.d (foreign_pointer_strict): new function
	(FOREIGN-POINTER, SET-FOREIGN-POINTER): implemented
	(foreign_address): barf on non-foreign and possibly on FOREIGN-POINTER
	* foreign1.lisp (foreign-pointer): added a defsetf
	* lispbibl.d (Faddress): fa_offset is signed
	* subr.d, constsym.d (foreign_pointer, set_foreign_pointer): added

2003-03-12  Sam Steingold  <sds@gnu.org>

	* makemake.in: win32msvc mean either msvc4 or msvc5 or msvc7 (.NET)
	* Makefile.devel (makefiles): added win32msvc/makefile.msvc7
	(win32msvc/makefile.msvc7): new target
	* win32.d: undef `unused' around `#include <windows.h>' for MSVC
	Suggested by Jay Kint <jkint@icosahedron.org>

2003-01-31  Jörg Höhle  <Joerg-Cyril.Hoehle@...>

	patch #[ 678216 ]: FFI:WITH-FOREIGN-STRING
	* foreign.lisp (with-foreign-string): store string on C stack
        using any encoding
	* foreign.d (call_with_foreign_string): ditto
	* subr.d, constsym.d (call_with_foreign_string): added